@startuml agenticWorkflow-class
left to right direction

package "agentic.workflow.llm" {
  enum SchemaType {
    INT
    STRING
    BOOLEAN
    LIST_INT
    LIST_STRING
    MAP_STRING_STRING
  }

  class StructuredOutput {
    - schemaTypes : SchemaType[]
    + StructuredOutput(schemaTypes : SchemaType...)
    + getSchemaTypes() : SchemaType[]
    + contains(schemaType : SchemaType) : boolean
    + size() : int
  }
}

package "agentic.workflow" {

  class WorkflowStep {
    - name : String
    - prompt : String
    - systemPrompt : String
    - structuredOutput : StructuredOutput
    + WorkflowStep(name : String, prompt : String, systemPrompt : String, structuredOutput : StructuredOutput)
    + getName() : String
    + setName(name : String) : void
    + getPrompt() : String
    + setPrompt(prompt : String) : void
    + getSystemPrompt() : String
    + setSystemPrompt(systemPrompt : String) : void
    + getStructuredOutput() : StructuredOutput
    + setStructuredOutput(structuredOutput : StructuredOutput) : void
    + expectsStructuredOutput() : boolean
    + simulateResponse() : String
  }

  class WorkflowFormatException <<checked exception>> {
    + WorkflowFormatException(message : String)
    + WorkflowFormatException(message : String, cause : Throwable)
  }

  class Agent {
    - name : String
    - steps : List<WorkflowStep>
    + Agent(name : String)
    + getName() : String
    + setName(name : String) : void
    + addStep(step : WorkflowStep) : void <<throws IllegalArgumentException>>
    + getSteps() : List<WorkflowStep> <<read-only>>
    + getStepCount() : int
    + findStepByName(stepName : String) : WorkflowStep
    + run() : void
    + {static} loadAgent(filename : String) : Agent <<throws IllegalArgumentException, IOException, WorkflowFormatException>>
    - {static} parseStep(reader : BufferedReader) : WorkflowStep <<throws IOException, WorkflowFormatException>>
  }

  note bottom of WorkflowStep
    public String simulateResponse() {
        SchemaType primary = structuredOutput.getSchemaTypes()[0];
        return switch (primary) {
            case INT -> "0";
            case STRING -> "sample";
            case BOOLEAN -> "true";
            case LIST_INT -> "[1,2,3]";
            case LIST_STRING -> "[\"a\",\"b\"]";
            case MAP_STRING_STRING -> "{\"key\":\"value\"}";
        };
    }
  end note

  note bottom of Agent
    **Required basic format:**
      AGENT: <agent name>
      STEP
        name=<step name>
        prompt=<prompt text>
        systemPrompt=<system prompt text>
        output=<schema type>
      ENDSTEP
  end note
}

Agent "1" *-- "0..*" WorkflowStep : ordered steps
WorkflowStep "1" --> "1" StructuredOutput : expects
StructuredOutput "1" --> "1..*" SchemaType : defines
Agent ..> WorkflowFormatException : throws and catches

@enduml